--- a/src/.classpath
+++ b/src/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="/home/james/Desktop/CPSC219/Project_Git/CPSC219_Team13_Project/src/classes"/>
+	<classpathentry kind="src" path="test"/>
+	<classpathentry kind="src" path="main"/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
