--- a/build.xml
+++ b/build.xml
@@ -22,6 +22,7 @@
         </copy>
     </target>
     <target name="clean">
+	<delete dir="jar"/>
         <delete dir="classes"/>
     </target>
     <target depends="clean" name="cleanall"/>
@@ -67,5 +68,13 @@
         <java classname="userInterface.MainFrameLauncher" failonerror="true" fork="yes">
             <classpath refid="CPSC219_Project_Git.classpath"/>
         </java>
+    </target>
+    <target name="jar" depends="build">
+        <mkdir dir="jar"/>
+        <jar destfile="jar/FrogCheckers.jar" basedir="classes">
+            <manifest>
+                <attribute name="userInterface.MainFrameLauncher" value="oata.HelloWorld"/>
+            </manifest>
+        </jar>
     </target>
 </project>
